# Enma

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Enma.Dockerfile  EnmaWithTest.Dockerfile  LICENSE  README.md  base.Dockerfile  conanfile.txt  input.txt  run_docker.sh  setup_build.sh  setup_docker.sh
.github/workflows/: cmake.yml
backend/: CMakeLists.txt  backend.cabal  main.cpp  package.yaml  stack.yaml
backend/app/: Main.hs
cmake/: clang-format.cmake  cmake-format.cmake
examples/: bad_operands.enma  continue_and_break.enma  continue_error.enma  fib.bytecode  fib.cpp  fib.enma  general_prog.bytecode  general_prog.cpp  general_prog.enma  input.enma  input.txt  missing_initialization.enma  parse_error.enma  trial.enma  type_mismatch.enma  type_miss_error.enma  undeclared_symbols_input.enma
frontend/: CMakeLists.txt  Common.cpp  Common.hpp  EnmaRuntimeError.cpp  EnmaRuntimeError.hpp  Environment.cpp  Environment.hpp  Error.cpp  Error.hpp  Expression.cpp  Expression.hpp  InstructionPrinter.cpp  Instructions.hpp  Instuctions.hpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  OpCode.hpp  Parser.cpp  Parser.hpp  SemanticCheck.cpp  SemanticCheck.hpp  Statements.cpp  Statements.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.cpp  Token.hpp  TokenTypes.hpp  main.cpp
ocaml-backend/: CMakeLists.txt  dune-project
ocaml-backend/lib/: data.ml  dune  emulator.ml  instr.ml  state.ml  util.ml  vector.ml
test/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  test.cpp
